# quantum-resource-estimator-api

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
q#/: bell_state.qs  superposition.qs
src/: Cargo.toml  main.rs  schema.rs
src/azure/: mod.rs
