[workspace.package]
authors = ["Photonic"]
homepage = "https://github.com/photonic-labs/quantum-resource-estimator-api"
repository = "https://github.com/microsoft/quantum-resource-estimator-api"
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace]
members = [
    "core",
    "cli",
    "src"
]
exclude = [
    "qsharp"
]

[workspace.dependencies]
clap = { version = "4.0", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }
