[package]
name = "qcore"
version = "0.1.0"
edition = "2021"

[dependencies]
resource_estimator = { path = "../qsharp/resource_estimator" }
qsc = { path = "../qsharp/compiler/qsc" }
qsc_frontend = { path = "../qsharp/compiler/qsc_frontend" }
qsc_wasm = { path = "../qsharp/wasm/"}
qsc_project = { path = "../qsharp/compiler/qsc_project" }
qsc_data_structures = { path = "../qsharp/compiler/qsc_data_structures" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.121" }
reqwest = "0.12.5"
tempfile = "3.10.1"

miette = { workspace = true }
clap = { workspace = true }